--- a/luxury.css
+++ b/luxury.css
@@ -19,114 +19,138 @@ html {
 /*Style the home page backgroud*/
 .home-page {
 	height: 100vh;
-	background: linear-gradient(rgba(0,0,0,0.2), #0a0a0a ), url(Images/2015-1711448167744-5518.jpg);
+	background: linear-gradient(rgba(0,0,0,0.5), #0a0a0a ), url(Images/2015-1711448167744-5518.jpg);
 	position: relative;
-	background-size: cover;
+	/* background-repeat: no-repeat; */
 	background-position: center;
+	/* background-size: auto; */
 }
 
 /*style the navbar*/
 .navbar {
-	z-index: 18;
-	width: 100%;
 	display: flex;
-	position: fixed;
-	align-items: center;
-	background-color: azure;
 	justify-content: space-between;
-	box-shadow: 0 0 12px;
+	z-index: 18;
+	align-items: center;
+	background-color: rgba(0,0,0,0.8);
 }
 
 /*style the logo*/
 .logo {
-	padding: .2em 2em;
 	font: 1.4rem bold;
 	letter-spacing: .17em;
 	text-transform: uppercase;
+	padding-left: 0px;
+	margin-left: 2px;
+	padding: 0 2rem;
 }
 
 .logo a {
 	text-decoration: none;
+	transition: color .4s;
 }
 
 .logo a:hover{
 	color: #FE9900;
 }
 
-/*Style the menu links*/
-.menu ul {
-	display: flex;
-	padding-right: 6em;
-	align-items: center;
-	list-style-type: none;
+.logo span {
+	color: rgb(255, 251, 0);
 }
 
+.logo span:hover {
+	color: blue;
+	transition: color 1s;
+}
+
+/*Style the menu links*/
+.menu ul {
+	margin-right: 2rem;
+	list-style-type: none;
+	display: flex;
+} 
+
 .menu a {
-	color: #080505;
-	padding: .5em;
-	font-size: 20px;
-	margin-right: .2em;
-	position: relative;
-	text-align: center;
-	display: inline-block;
+	color: #fff;
 	text-decoration: none;
-	transition: .4s ease-in-out;
+	position: relative;
+	display: inline-block;
+	padding: 0 2rem;
+	transition: .2s ease-in-out;
 }
 
 /*Style the icons on the menu links*/
 .menu .fa-solid, .fa-shopify {
-	color: #000;
+	color: #5816e6;
 	margin-right: 5px;
+}
+
+.menu .fa-solid:hover, .fa-shopify:hover {
+	color: darkorange;
 }
 
 /*Apply hover effect on the menu list items*/
 .menu a::after {
-	top: 75%;
-	left: 0%;
+	top: 100%;
+	left: 10%;
 	width: 0%;
 	content: "";
-	height: .12em;
+	height: .15em;
 	position: absolute;
 	transition: width .3s;
-	background-color: #000000;
+	background-color: #5ada1a;
 	border-radius: 2em 2em 0 0;
 }
 
 .menu a:hover::after {
-	width: 100%;
+	width: 80%;
 }
 
 .menu a:hover {
 	font-weight: 500;
 	color: #FE9900;
 }
-
 /*Style the navbar on small screens*/
 @media screen and (max-width: 660px) {
 	/*style the logo*/
 	.logo {
-		padding: .1em 1em;
-		font: 1.5rem bold;
+		padding: 0 1em;
 	}
-	/*Style the menu links on small screens*/
-	.menu ul {
-		top: 9%;
-		left: 50%;
-		width: 80%;
-		z-index: 15;
-		display: flex;
+
+	.hambuger-btn span {
+		position: absolute;
+		top: 2%;
 		position: fixed;
-		padding: 1.5em 2em;
-		border-radius: .4em;
-		flex-direction: column;
-		align-items: flex-start;
-		background-color: #c8cbca;
-		transform: translate(-50%, 10%);
+		cursor: pointer;
+		color: white;
+		right: 25px;
+		z-index: 3;
+		font-size: 16px;
+		margin-left: 50px;
+		padding: 3px;
+		background-color: black;
 	}
-	.hamburger {
+
+	/*Style the menu links on small screens*/
+	.sideNav  {
+		height: 100%; /* 100% Full-height */
+		width: 0; /* 0 width - change this with JavaScript */
+		position: fixed; /* Stay in place */
+		z-index: 1; /* Stay on top */
+		top: 0; /* Stay at the top */
+		right: 0;
+		background-color: #111; /* Black*/
+		transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+	}
+
+	.sideNav ul li a {
+		font-size: 15px;
+		color: #818181;
+		transition: 0.3s;
 		display: block;
 	}
 }
+
 
 /*style the hero*/
 .hero {
@@ -151,21 +175,22 @@ html {
 
 .hero-photo img:hover {
 	transform: scale(1.1);
+	box-shadow: 1px 0px 3px  blue;
 }
 
 /*style the hero info*/
-.hero-text h1, p {
+.hero-text h2, p {
 	padding-bottom: .1em;
 }
 
-.hero-text h1, p {
-	font-size: 2em;
-	padding-bottom: .1em;
-}
-
-.hero-text h1 {
-	font: 4em bolder;
+.hero-text h2 {
+	font: 3em bolder;
 	letter-spacing: .1em;
+}
+
+.hero-text p {	
+	font-size: 1.5rem;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 /*Style the hero on small screens*/
@@ -174,38 +199,44 @@ html {
 		width: 140px;
 		height: 140px;
 	}	
-	.hero-text h1 {
-		font-size: 1.6em;
+	.hero-text h2 {
+		font-size: 1.5em;
 		line-height: 20px;
-		padding-bottom: .2em;
-		letter-spacing: unset;
+		padding-bottom: .2em 0 ;
 	}
 	.hero-text p {
-		font: .9em;
+		font-size: 1rem;
 		font-family: Georgia, 'Times New Roman', Times, serif;
 		padding: .2em 0;
-		line-height: 1.7em;
 	}
 }
 
 /*style the brands section*/
-.brands-section h3 {
+.brands-section h4 {
 	color: #FE9900;
-	font-size: 2.4rem;
-	/* font-family: "Brush Script MT", cursive; */
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .brands {
-	width: 80%;
+	width: 90%;
 	margin: 0 auto;
 	display: flex;
 	padding-top: 1.3rem;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	text-align: left;
+}	
+
+.brands ul {
+	list-style-type: none;
+
 }
 
-.brands li {
-	font-size: 1.5em;
+/*Style the brands on small screens*/
+@media screen and (max-width: 660px) {
+	.brands {
+		width: 90%;
+		font-size: .6rem;
+	}
 }
 
 /*Style the card section*/
@@ -228,10 +259,6 @@ html {
 .card-text {
 	font-size: 1.5em;
 	font-family: 'Fauna One', serif;
-}
-
-.star-rating {
-	padding-bottom: 4px;
 }
 
 .card .btn-primary {
@@ -276,14 +303,33 @@ html {
 	font-size: 1.2rem;
 }
 
+@media screen and (max-width: 660px) {
+	.Card h3{
+		font-size: 1rem;
+		padding: 0;
+	}
+	.card-title {
+		font-size: 1.2rem;
+	}
+	.card-text {
+		font-size: 1em;
+	}
+	.card .btn-primary {
+		font-size: .6rem;
+	}
+	.text-body-secondary {
+		font-size: 12px;
+	}
+	
+}
+
 /*Style the buy section*/
 .buy-section {
 	background-color: #f1f1f1;
 }
 
-.buy-section-h3 {
+.buy-section-h4 {
 	text-align: center;
-	color: #000000;
 	padding: 3rem 0;
 	font-family: Rubik, sans-serif;
 }
@@ -292,52 +338,45 @@ html {
 	display: flex;
 	width: 80%;
 	margin: auto;
+	align-items: flex-start;
 	padding-bottom: 2em;
 	justify-content: space-between;
 }
 
  .order-table {
 	width: 100%;
-	flex-basis: 38%;
+	flex-basis: 40%;
 }
 
-.filter-table {
-	display: inherit;
-  }
-
   #myInput {
-	background-image: url('/css/searchicon.png');
-	background-position: 10px 10px;
-	background-repeat: no-repeat;
-	width: 100%;
+	width: inherit;
 	font-size: 16px;
-	padding: 12px 20px 12px 40px;
+	padding: 12px 20px 12px;
 	border: 1px solid #ddd;
-	margin-bottom: 12px;
+	margin-bottom: 12px 0;
   }
 
   .sort-table {
 	border: 1px solid #808080;
 	border-radius: 4px;
 	font-size: 1rem;
-	padding: 4px 6px;
+	padding: 2px 3px;
   }
 
 .purchases {
 	display: inherit;
 	width: 100%;
-	padding-left: 2em;
+	margin-left: 20px;
 	flex-basis: 60%;
+	border: 1px solid #a29b9b;
+	border-radius: 5px;
+	padding: .5rem;
 }
 
 table, th, td {
 	border: 1px solid black;
 	border-collapse: collapse;
   }
-
-  table {
-	width: 100%;
-}
 
   th, td {
 	  padding: 5px 10px;
@@ -347,15 +386,7 @@ table, th, td {
 	background-color: #eee;
   }
 
-/*Syle the billing form*/
-.row {
-	display: -ms-flexbox; /* IE10 */
-	display: flex;
-	-ms-flex-wrap: wrap; /* IE10 */
-	flex-wrap: wrap;
-	margin: 0 -16px;
-  }
-  
+/*Syle the billing form*/ 
   .col-50 {
 	-ms-flex: 50%; /* IE10 */
 	flex: 50%;
@@ -440,13 +471,33 @@ table, th, td {
 	color: grey;
   }
   
-  /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (also change the direction - make the "cart" column go on top) */
-  @media (max-width: 800px) {
-	.row {
-	  flex-direction: column-reverse;
+  /* Responsive layout - when the screen is less than 660px wide, make the two columns stack on top of each other instead of next to each other (also change the direction - make the "cart" column go on top) */ 
+  @media screen and (max-width: 660px){
+	.buy-section-h4 h4 {
+		font-size: 1.1rem;
 	}
-	.col-25 {
-	  margin-bottom: 20px;
+	.order-section {
+		display: flex;
+		flex-direction: column;
+	}
+	.filter-table #myInput {
+		margin-left: 0;
+		width: 33%;
+		padding: 8px 0px 8px 5px;
+	}
+	#myTable  {
+		width: 100%;
+		font-size: 10px;
+		padding: 2px;
+		margin-bottom: 2rem;
+	}
+}
+  @media screen and (max-width: 660px) {
+	.purchases {
+		margin: 0;
+	}
+	.right-details {
+		width: 100%;
 	}
   }
 /*Style the contact form submit button*/
