--- a/luxury.css
+++ b/luxury.css
@@ -211,6 +211,44 @@ html {
 	}
 }
 
+/* style the team section */
+.team {
+	padding: 2rem 0;
+	text-align: center;
+	font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.team {
+	background-color: #f2f2f2;
+	margin: 0 auto;
+}
+
+.team-section {
+	display: flex;
+	width: 80%;
+	justify-content: space-between;
+	padding: 2rem 3rem;
+	margin: 0 auto;
+}
+
+.team-member img {
+	object-fit: cover;
+	object-position: top;
+	/* padding-bottom: 1rem; */
+	border-radius: 50%;
+}
+
+.team-member .team-p {
+	padding-top: 2rem;
+	text-align: center;
+}
+
+
+@media screen and (max-width: 660px)  {
+	.team-section {
+		flex-direction: column;
+	}
+}
+
 /*style the brands section*/
 .brands-section h4 {
 	color: #FE9900;
